--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://https://jackyhippo.github.io/Pomodoro/" />
+  <meta property="og:url" content="https://jackyhippo.github.io/Pomodoro/" />
   <meta property="og:title" content="番茄鐘" />
   <meta property="og:description" content="番茄鐘番茄鐘番茄鐘番茄鐘番茄鐘" />
-  <meta property="og:image" content="https://https://jackyhippo.github.io/Pomodoro/tomato-blood.png" />
+  <meta property="og:image" content="https://jackyhippo.github.io/Pomodoro/tomato-blood.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://https://jackyhippo.github.io/Pomodoro/" />
+  <meta property="twitter:url" content="https://jackyhippo.github.io/Pomodoro/" />
   <meta property="twitter:title" content="番茄鐘" />
   <meta property="twitter:description" content="番茄鐘番茄鐘番茄鐘番茄鐘番茄鐘" />
-  <meta property="twitter:image" content="https://https://jackyhippo.github.io/Pomodoro/tomato-blood.png" />
+  <meta property="twitter:image" content="https://jackyhippo.github.io/Pomodoro/tomato-blood.png" />
 </head>
 
 <body>
